--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_build/html
-        cname: booknlp.pythonhumanities.com
+#         cname: booknlp.pythonhumanities.com
