--- a/_toc.yml
+++ b/_toc.yml
@@ -8,3 +8,10 @@ parts:
     title: Introduction to BookNLP
   - file: 02_starting
     title: Getting Started with BookNLP
+- caption: Analyzing the Output
+  numbered: true
+  chapters:
+  - file: 03_files
+    title: The Output Files
+  - file: 04_events
+    title: Analyzing Events
